@@ -1,0 +1,13 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>{{ page.title }}</title>
+</head>
+<body>
+<p class="summary">{{ page.summary | asciidocify: 'inline' }}</p>
+<div class="page-content">
+{{ content }}
+</div>
+</body>
+</html>
