@@ -3,16 +3,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Posts</title>
+<title>Post Excerpts</title>
 </head>
 <body>
 <div class="index">
 <h1>Posts</h1>
 <ul class="posts">
 {% for post in site.posts %}
-<li>
-<a href="{{ post.url }}">{{ post.title }}</a>
-{% if post.excerpt != '' %}<div class="excerpt">{{ post.excerpt }}</div>{% endif %}
+<li data-slug="{{ post.slug }}">
+<h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+<p class="excerpt">{{ post.excerpt }}</p>
 </li>
 {% endfor %}
 </ul>
